Change map config and fix heart alignment

--- a/styles/scss/global.scss
+++ b/styles/scss/global.scss
@@ -25,8 +25,6 @@ body {
   border-top-width: 0;
 }
 
-.bi-heart-fill {
-  &:before {
-    vertical-align: -0.175em;
-  }
+.bi-heart-fill:before {
+  vertical-align: -0.175em;
 }
